--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "@angular/platform-browser": "^15.0.4",
     "@angular/platform-browser-dynamic": "^15.0.4",
     "@angular/router": "^15.0.4",
+    "@ckeditor/ckeditor5-angular": "^6.0.1",
+    "@ckeditor/ckeditor5-build-classic": "^37.1.0",
+    "@ckeditor/ckeditor5-upload": "^37.1.0",
     "@ngrx/effects": "^14.3.1",
     "@ngrx/router-store": "^14.3.1",
     "@ngrx/store": "^14.3.1",
