--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@ngrx/router-store": "^14.3.1",
     "@ngrx/store": "^14.3.1",
     "@ngrx/store-devtools": "^14.3.1",
+    "echarts": "^5.4.2",
     "ng-let": "^14.0.1",
     "ngx-quicklink": "^0.3.0",
     "rxjs": "~6.6.0",
@@ -72,6 +73,7 @@
     "@storybook/builder-webpack5": "^6.5.12",
     "@storybook/manager-webpack5": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
+    "@types/echarts": "^4.9.18",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
